--- a/AS/AS BAC.html
+++ b/AS/AS BAC.html
@@ -19,8 +19,8 @@
             </tr>
 
             <tr>
-                <th ><a href="a" class="bacem"><h2>مواضيع وحلول شهادات البكالوريا في العلوم الفيزيائية</h2></a></th>
-                <th ><a href="a" class="bacem"><h2>مواضيع وحلول شهادات البكالوريا في الرياضيات</h2></a></th>
+                <th ><a href="b" class="bacem"><h2>مواضيع وحلول شهادات البكالوريا في العلوم الفيزيائية</h2></a></th>
+                <th ><a href="b" class="bacem"><h2>مواضيع وحلول شهادات البكالوريا في الرياضيات</h2></a></th>
             </tr>
 
         </table>
