--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div class="animate__animated animate__backInDown">
-            <img src="image/logo complet.png" class="logo animate__animated animate__backInDown"  >
+            <img src="image/logo complet big.png" class="logo animate__animated animate__backInDown"  >
     </div>
     <br>
     <br>
     <div class=" animate__animated animate__backInLeft" style="background:#F5F5F5; height: 100%;">
 
-        <table style="width:100%">
+        <table>
             <tr class="choisir">
               <th class="AR">التعليم الابتدائي</th>
               <th class="AM">التعليم المتوسط</th>
