--- a/AS/AS3.html
+++ b/AS/AS3.html
@@ -19,16 +19,16 @@
             </tr>
 
             <tr>
-                <th ><a href="a"><img src="image/exam physics.png" class=" exp" ></a></th>
-                <th ><a href="a"><img src="image/exam maths.png" class="exm"></a></th>
+                <th ><a href="a/aas.html"><img src="image/exam physics.png" class=" exp" ></a></th>
+                <th ><a href="a/aas.html"><img src="image/exam maths.png" class="exm"></a></th>
             </tr>
             <tr>
-                <th ><a href="a"><img src="image/st phy.png" class=" exp" ></a></th>
-                <th ><a href="a"><img src="image/st math.png" class="exm"></a></th>
+                <th ><a href="b"><img src="image/st phy.png" class=" exp" ></a></th>
+                <th ><a href="b"><img src="image/st math.png" class="exm"></a></th>
             </tr>
             <tr>
-                <th ><a href="a"><img src="image/md phy.png" class=" exp" ></a></th>
-                <th ><a href="a"><img src="image/md math.png" class="exm"></a></th>
+                <th ><a href="b"><img src="image/md phy.png" class=" exp" ></a></th>
+                <th ><a href="b"><img src="image/md math.png" class="exm"></a></th>
             </tr>
         </table>
 
