--- a/AS/a/aas.html
+++ b/AS/a/aas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="aas.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
         <div>
             <img src="image/logo complet.png" class="logo"  >
         </div>
+
         <div>
             <table>
                 <tr>
@@ -140,6 +142,10 @@
                 </tr>
     
             </table>
+
+
+
+
 
         </div>
 
