--- a/AM/a/3am ph.html
+++ b/AM/a/3am ph.html
@@ -12,7 +12,7 @@
 
     <div class=" animate__animated animate__backInLeft">
 
-        <h3>نماذج فروض واختبارات الرياضيات سنة 1 ثانوي</h3>
+        <h3>نماذج فروض واختبارات في الفيزياء سنة 3 متوسط</h3>
 
         <div>
             <img src="image/logo complet.png" class="logo"  >
