--- a/AS/AS1.html
+++ b/AS/AS1.html
@@ -20,8 +20,8 @@
             </tr>
 
             <tr>
-                <th ><a href="a/aas.html"><img src="image/exam physics.png" class=" exp" ></a></th>
-                <th ><a href="a/aas.html"><img src="image/exam maths.png" class="exm"></a></th>
+                <th ><a href="a/1as ph.html"><img src="image/exam physics.png" class=" exp" ></a></th>
+                <th ><a href="a/1as.html"><img src="image/exam maths.png" class="exm"></a></th>
             </tr>
             <tr>
                 <th ><a href="b"><img src="image/st phy.png" class=" exp" ></a></th>
