--- a/AM/AM2.html
+++ b/AM/AM2.html
@@ -19,8 +19,8 @@
             </tr>
 
             <tr>
-                <th ><a href="a/aas.html"><img src="image/exam physics.png" class=" exp" ></a></th>
-                <th ><a href="a/aas.html"><img src="image/exam maths.png" class="exm"></a></th>
+                <th ><a href="a/2am ph.html"><img src="image/exam physics.png" class=" exp" ></a></th>
+                <th ><a href="a/2am.html"><img src="image/exam maths.png" class="exm"></a></th>
             </tr>
             <tr>
                 <th ><a href="a"><img src="image/st phy.png" class=" exp" ></a></th>
