--- a/AM/AM BEM.html
+++ b/AM/AM BEM.html
@@ -19,8 +19,8 @@
             </tr>
 
             <tr>
-                <th ><a href="a" class="bacem"><h2>مواضيع وحلول شهادات التعليم المتوسط في العلوم الفيزيائية</h2></a></th>
-                <th ><a href="a" class="bacem"><h2>مواضيع وحلول شهادات التعليم المتوسط في الرياضيات</h2></a></th>
+                <th><a href="b" ><img src="image/bem ph.png" class="bacem"></a></th>
+                <th ><a href="b" ><img src="image/bem math.png" class="bacem"></a></th>
             </tr>
         </table>
 
